--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,19 @@ amqp==2.6.1
 asgiref==3.3.1
 async-timeout==3.0.1
 attrs==20.3.0
+backcall==0.2.0
+billiard==3.6.4.0
 celery==4.4.7
+certifi==2021.5.30
+chardet==4.0.0
+coreapi==2.3.3
+coreschema==0.0.4
+decorator==5.0.9
 Django==3.1.6
 django-extensions==3.1.1
 django-filter==2.4.0
 django-fsm==2.7.1
+django-jazzmin==2.4.8
 djangorestframework==3.12.2
 drf-base64==2.0
 drf-yasg==1.20.0
@@ -17,6 +25,8 @@ flake8==3.9.0
 flower==0.9.7
 gunicorn==20.0.4
 hiredis==2.0.0
+humanize==3.11.0
+idna==2.10
 inflection==0.5.1
 iniconfig==1.1.1
 ipython==7.21.0
@@ -25,10 +35,19 @@ itypes==1.2.0
 jedi==0.18.0
 Jinja2==2.11.3
 jsonschema==3.2.0
+kombu==4.6.11
+MarkupSafe==2.0.1
+mccabe==0.6.1
 mock==4.0.3
+multidict==5.1.0
 openapi-codec==1.3.2
 packaging==20.9
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
 pluggy==0.13.1
+prometheus-client==0.8.0
+prompt-toolkit==3.0.20
 psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 py==1.10.0
