--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 decorator==5.0.9
 Django==3.1.6
+django-crispy-forms==1.12.0
 django-extensions==3.1.1
 django-filter==2.4.0
 django-fsm==2.7.1
