--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ chardet==4.0.0
 coreapi==2.3.3
 coreschema==0.0.4
 decorator==5.0.9
+dj-database-url==0.5.0
 Django==3.1.6
 django-crispy-forms==1.12.0
 django-extensions==3.1.1
@@ -85,4 +86,5 @@ uritemplate==3.0.1
 urllib3==1.26.3
 vine==1.3.0
 wcwidth==0.2.5
+whitenoise==5.3.0
 yarl==1.6.3
