--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,7 @@ services:
   django:
     working_dir: /code/src
     build: .
-    command: bash -c "python manage.py migrate && python manage.py collectstatic --noinput"
-    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
+    command: bash -c "python manage.py migrate && python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
