--- a/heroku.yml
+++ b/heroku.yml
@@ -1,7 +1,7 @@
 build:
   docker:
-    web: Dockerfile
-    worker: Dockerfile
+    web: Dockerfile.web
+    worker: Dockerfile.web
 run:
   web: python manage.py migrate && python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:$PORT
   worker: celery -A core worker -B --loglevel=INFO --concurrency=1
