--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
 
-  # redis:
-  #   image: "redis:alpine"
-  #   ports:
-  #     - 6379:6379
+  redis:
+    image: "redis:alpine"
+    ports:
+      - 6379:6379
 
   django:
     working_dir: /code/src
